<resources>
    <string name="app_name">Quiz App</string>
    <string name="Start">Start</string>
    <string name="quizlayoutText">QuizLayout</string>
    <string name="first_question">1) Is Android better than iOS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="second_question">2) Are cats the best?</string>
    <string name="third_question">3) 2 + 2 * 2 = 6 ?</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="results_text">Your results:</string>
    <string name="restart">Restart</string>
    <string name="birthday_date">Date of birth</string>
    <string name="dateTitle">Choose date of birth</string>
</resources>