<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="@string/quizlayoutText"
    tools:context=".QuizFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_question"
            android:textSize="35sp"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/first_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/first_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/left_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/yes"
                    android:layout_marginStart="60dp"/>
                <RadioButton
                    android:id="@+id/right_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/no"
                    android:layout_marginStart="125dp"/>

        </RadioGroup>


        <TextView
            android:id="@+id/second_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/second_question"
            android:textSize="35sp"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toBottomOf="@id/first_radio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/second_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/second_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/left_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/yes"
                    android:layout_marginStart="60dp"/>
                <RadioButton
                    android:id="@+id/right_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/no"
                    android:layout_marginStart="125dp"/>

        </RadioGroup>


        <TextView
            android:id="@+id/third_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/third_question"
            android:textSize="35sp"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toBottomOf="@id/second_radio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/third_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/third_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/left_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/yes"
                    android:layout_marginStart="60dp"/>
                <RadioButton
                    android:id="@+id/right_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/no"
                    android:layout_marginStart="125dp" />

        </RadioGroup>

        <Button
            android:id="@+id/send_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_radio"
            app:layout_constraintStart_toEndOf="@id/back_button"
            android:layout_marginTop="20sp"
            android:enabled="false"
            android:textSize="20sp"
            android:text="@string/send"/>
        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_results"
            app:layout_constraintTop_toBottomOf="@id/third_radio"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:text="@string/back"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>